Configure development base URL & production base URL with Vite & instantiate Typescript HTTP client from generated code - step 18
