# server/api/Services/AuthorService.cs
@@ -1,19 +1,30 @@
-﻿namespace api.Etc;
+﻿using api.Etc.DTOs;
+using DataAccess;
+using Microsoft.EntityFrameworkCore;
+
+namespace api.Etc;
 public interface IAuthorService
 {
-    List<string> GetAuthor();
+    IEnumerable<AuthorDto> GetAuthor();
+    
 }
 
 public class AuthorService : IAuthorService
 {
-    public AuthorService()
+    private readonly NeondbContext _context;
+    public AuthorService(NeondbContext context)
     {
-        Console.WriteLine("AuthorService being used");
+        _context = context;
+    }
+    
+    public IEnumerable<AuthorDto> GetAuthor()
+    {
+        return _context.Set<Author>()
+            .Include(a => a.Books)
+            .ThenInclude(b => b.Genre)
+            .Select(a => new AuthorDto(a))
+            .ToList();
     }
 
-    public List<string> GetAuthor()
-    {
-        throw new NotImplementedException();
-    }
 
 }
